tests/sources/invalid/types/semantic_operator_errors.fire
// Semantic type errors for binary operators (-, *, /, **, &&, ||, %).

fn sub_mismatch() -> int32 {
    a: int32 = 5;
    b: float64 = 2.0;
    c: int32 = a - b;  //~ ERROR FS-SEM-0010 @18
    return c;
}
